# achadinhos

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: 01-criar-vm-arm-oracle.md  02-plano-fase0.md  03-git-e-deploy.md  04-tranches-e-horarios.md  05-whatsapp-roteiro.md  STATUS.md
inputs/: categorias_cod_ml.txt  categorias_keywords_shopee.txt  marcas_premium.txt  produtos_supermercado.json
migrations/: 0001_init.sql
scripts/: backup_db.sh  run_slot.sh  validar_ml_sem_navegador.py
src/luachadinhos/: __init__.py  __main__.py  cli.py
src/luachadinhos/collectors/: __init__.py
src/luachadinhos/config/: __init__.py  inputs.py  runtime_config.py  settings.py
src/luachadinhos/control/: __init__.py  kill_switch.py  notifier.py
src/luachadinhos/db/: __init__.py  engine.py  historico.py  repository.py
src/luachadinhos/decision/: __init__.py  anti_fake.py  dedup.py  engine.py  score.py  (+2 more)
tests/: __init__.py
tests/fixtures/: ml_ofertas_MLB1051.html  shopee_response_sample.json
tests/unit/: test_anti_fake.py  test_cli.py  test_config.py  test_copy_wa.py  test_dedup.py  test_engine_decisao.py  test_historico.py  test_kill_switch.py  test_migrations_estrutura.py  test_ml_collector.py  test_ml_desconto.py  test_ml_fetch.py  test_ml_parser.py  test_nichos.py  test_notifier.py  test_pipeline_slot.py  test_repository.py  test_schema_ptbr.py  test_score.py  test_shopee_api.py  test_shopee_collector.py  test_shopee_parser.py  test_telegram_publisher.py  test_tokenizer.py  test_whatsapp_publisher.py
(+21 files in other folders)
